objects/UACSponsor__c.object
<CustomObject>
    <fields>
        <fullName>Care_Provider__c</fullName>
        <label>Care Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor</label>
        <referenceTo>Sponsor__c</referenceTo>
        <relationshipName>UAC_Sponsor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UAC_A_Number__c</fullName>
        <formula>UAC__r.A_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UAC A Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UAC_Date_of_Birth__c</fullName>
        <label>UAC Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UAC_Name__c</fullName>
        <label>UAC Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UAC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UAC</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>UACSponsor</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Minor(s)</label>
    <nameField>
        <displayFormat>UACSP-{0000}</displayFormat>
        <label>UAC Sponsor</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Minors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>